# praxio

./: .gitignore  Dockerfile  LICENSE  README.md  README_binddnsserver.md  README_binddnsserver.service  app.py  custom_blog.py  custom_chat.py  custom_cloud.py  custom_gallery.py  deflate_img.py  dnode.py  docker-compose.yml  gallery.py  pyproject.toml  requirements.txt  search_engine.py  settings.py
prx_fr/: README.md  package-lock.json  package.json
prx_fr/src/router/: index.js
prx_fr/src/views/: CloudView.vue  DashboardView.vue  PicsView.vue
services/: management.py
templates/: c_chat.html  n_gallery.html  n_upload.html  s_engine.html  v_gallery.html
utils/: deflate_img.py  file_managment.py
