[tool.poetry]
name = "praxio"
version = "0.1.0"
description = "services for lan networks"
authors = ["pedro rivera"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
htmlmin = "^0.1.12"
Jinja2 = "^3.1.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
